# tournament_generator

./: README.md  pyproject.toml
src/: main.py
